# swagger.json
@@ -330,19 +330,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "movieTitle": {
+                "serieTitle": {
                   "example": "any"
                 },
-                "movieAuhorName": {
+                "serieAuhorName": {
                   "example": "any"
                 },
-                "movieAuhorLastName": {
+                "serieAuhorLastName": {
                   "example": "any"
                 },
-                "movieGenre": {
+                "serieGenre": {
                   "example": "any"
                 },
-                "movieYear": {
+                "serieYear": {
+                  "example": "any"
+                },
+                "watched": {
+                  "example": "any"
+                },
+                "opinion": {
                   "example": "any"
                 }
               }
@@ -400,19 +406,180 @@
             "schema": {
               "type": "object",
               "properties": {
-                "movieTitle": {
+                "serieTitle": {
                   "example": "any"
                 },
-                "movieAuhorName": {
+                "serieAuhorName": {
                   "example": "any"
                 },
-                "movieAuhorLastName": {
+                "serieAuhorLastName": {
                   "example": "any"
                 },
-                "movieGenre": {
+                "serieGenre": {
                   "example": "any"
                 },
-                "movieYear": {
+                "serieYear": {
+                  "example": "any"
+                },
+                "watched": {
+                  "example": "any"
+                },
+                "opinion": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/animes/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "animeTitle": {
+                  "example": "any"
+                },
+                "animeAuhorName": {
+                  "example": "any"
+                },
+                "animeAuhorLastName": {
+                  "example": "any"
+                },
+                "animeGenre": {
+                  "example": "any"
+                },
+                "animeYear": {
+                  "example": "any"
+                },
+                "watched": {
+                  "example": "any"
+                },
+                "opinion": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/animes/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "animeTitle": {
+                  "example": "any"
+                },
+                "animeAuhorName": {
+                  "example": "any"
+                },
+                "animeAuhorLastName": {
+                  "example": "any"
+                },
+                "animeGenre": {
+                  "example": "any"
+                },
+                "animeYear": {
+                  "example": "any"
+                },
+                "watched": {
+                  "example": "any"
+                },
+                "opinion": {
                   "example": "any"
                 }
               }
